# phenotag

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PR_DESCRIPTION.md  PR_DESCRIPTION_ANNOTATION_FIXES.md  PR_DESCRIPTION_ANNOTATION_IMPROVEMENTS.md  PR_DESCRIPTION_STATION_NORMALIZATION.md  README.md  README_AGENTS.md  basic_test.py  check_fix.py  pyproject.toml  repair_annotation_status_files.py  test_annotation_paths.py  test_annotation_status_paths.py  test_fix.py  validate_fixes.py
.github/workflows/: publish.yml
docs/: PHENOCAMS_DATABASE_INTEGRATION_TASKS.md  README.md  __init__.py  annotation_files_schema.md  annotation_loading_saving.md  annotation_system.md  dataframe_selection_examples.py  filename_formats.md  opencv-roi-docs.md  phenotag_core_integration.md  phenotag_integration_guide.md  popup_annotation_workflow.md  roi_overlay_integration_guide.md  station_name_normalization.md  ui_guide.md
docs/algorithms/: README.md  default_roi_algorithm.md  default_roi_examples.md
docs/api-reference/: README.md  annotation_system.md
docs/configuration/: README.md  file_formats_reference.md  stations_yaml_schema.md
docs/developer-guide/: README.md  io_tools.md  memory_management_example.md  phenotag_dataeditor_row_selection.py  phenotag_integration_guide.md
docs/external_api_docs/: README.md
docs/user-guide/: README.md  phenotag_for_beginners.md  (+1 more)
tests/: test_annotation_loading.py  test_annotation_save_button.py  test_integration_annotation_flow.py  test_io_tools.py  test_io_tools_integration.py  test_memory_manager.py  test_memory_optimized_processor.py
(+82 files in other folders)
